app/assets/stylesheets/_site.scss
/* ... */
.setting-view-link-0 {
    .view-link-app {
        display: block;
    }
    .view-link-tab {
        display: none;
    }
}
.setting-view-link-1 {
    .view-link-app {
        display: none;
    }
    .view-link-tab {
        display: block;
    }
}

.content-styles {
    font-style: normal;
    font-size: 1.15em;
    line-height: 1.6;
    @include color($text-color-body, $text-color-body-night, $text-color-body-sunset);
    text-rendering: optimizeLegibility;
    word-break: break-word;

    strong {
        font-weight: 700;
        font-style: normal;
    }

    em {
        font-style: italic;
    }

    h1, h2, h3, h4, h5, h6 {
        font-weight: bold;
        font-style: normal;
        margin: 0 0 .5em 0;
        text-rendering: optimizeLegibility;
        @include color($text-header-color, $text-header-color-night, $text-header-color-sunset);
    }

    h1, h2 {
        font-size: 1.3em;
        line-height: 1.3;
    }

    h3, h4, h5, h6 {
        font-size: 1.1em;
        line-height: 1.4;
    }

    p,
    ul,
    ol,
    figure,
    blockquote,
    .media-container {
        margin: 0 0 1.1em 0;
    }

    blockquote[align="center"] {
        text-align: left;
    }

    dd {
        margin-left: 0;
    }

    li {
        margin: 0 0 .2em 0;
    }

    img {
        display: block;
        margin: 0 0 10px 0;
        width: auto\9;
        height: auto;
        max-width: 100%;
        vertical-align: middle;
        border: 0;
        -ms-interpolation-mode: bicubic;
        &[align="left"] {
            float: none;
        }
        &[align="right"] {
            float: none;
        }
        &.hide {
            display: none;
        }
    }


    pre code {
        @include background-color($list-background-color, $list-background-color-night, $list-background-color-sunset);
        @include color($text-color-body, $text-color-body-night, $text-color-body-sunset);
        display: block;
        overflow-x: auto;
        white-space: pre;
        word-wrap: normal;
        font-size: 90%;
    }

    tt, code, kbd, samp {
        font-family: Consolas, Monaco, monospace;
        overflow-x: scroll;
    }

    blockquote {
        padding: 0 0 0 15px;
        border-left: 4px solid transparent;
        @include border-color($border-color, $border-color-night, $border-color-sunset);
    }

    blockquote,
    blockquote p {
        @include color($text-color-body, $text-color-body-night, $text-color-body-sunset);
    }

    blockquote p:last-child {
        margin-bottom: 0;
    }

    figcaption, caption {
        font-size: 80%;
        @include color($text-color-light, $text-color-light-night, $text-color-light-sunset);
        font-style: italic;
        line-height: 1.3;
    }

    video, audio {
        display: block;
        width: 100%;
        background-color: #000;
        max-width: 100%;
    }

    th {
        text-align: left;
    }

    .text {
        white-space: pre-wrap;
    }

}
/* ... */

